[package]
name = "slicestring"
version = "0.3.0"
edition = "2018"
author = "flopetautschnig (floscodes)"
description = "slicestring is a crate for slicing Strings"
license = "MIT OR Apache-2.0"
keywords = ["strings", "slice", "substr", "substring", "cut"]
categories = ["string-slicing", "substring", "text-processing", "algorithms"]
repository = "https://github.com/floscodes/slicestring"
readme = "README.md"